tests/ui/autotraits.stderr
error[E0277]: `*const u8` cannot be sent between threads safely
  --> tests/ui/autotraits.rs:18:20
   |
18 |     require_send::<MyPhantom<*const u8>>();
   |                    ^^^^^^^^^^^^^^^^^^^^ `*const u8` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `*const u8`
note: required for `TypeParam<*const u8>` to implement `Send`
  --> tests/ui/autotraits.rs:6:1
   |
 6 | #[phantom]
   | ^^^^^^^^^^
note: required because it appears within the type `__void_MyPhantom::MyPhantom<*const u8>`
  --> tests/ui/autotraits.rs:7:8
   |
 7 | struct MyPhantom<T: ?Sized>;
   |        ^^^^^^^^^
note: required because it appears within the type `MyPhantom<*const u8>`
  --> tests/ui/autotraits.rs:7:8
   |
 7 | struct MyPhantom<T: ?Sized>;
   |        ^^^^^^^^^
note: required by a bound in `require_send`
  --> tests/ui/autotraits.rs:9:20
   |
 9 | fn require_send<T: Send>() {}
   |                    ^^^^ required by this bound in `require_send`
   = note: this error originates in the attribute macro `phantom` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `*const u8` cannot be shared between threads safely
  --> tests/ui/autotraits.rs:19:20
   |
19 |     require_sync::<MyPhantom<*const u8>>();
   |                    ^^^^^^^^^^^^^^^^^^^^ `*const u8` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `*const u8`
note: required for `TypeParam<*const u8>` to implement `Sync`
  --> tests/ui/autotraits.rs:6:1
   |
 6 | #[phantom]
   | ^^^^^^^^^^
note: required because it appears within the type `__void_MyPhantom::MyPhantom<*const u8>`
  --> tests/ui/autotraits.rs:7:8
   |
 7 | struct MyPhantom<T: ?Sized>;
   |        ^^^^^^^^^
note: required because it appears within the type `MyPhantom<*const u8>`
  --> tests/ui/autotraits.rs:7:8
   |
 7 | struct MyPhantom<T: ?Sized>;
   |        ^^^^^^^^^
note: required by a bound in `require_sync`
  --> tests/ui/autotraits.rs:10:20
   |
10 | fn require_sync<T: Sync>() {}
   |                    ^^^^ required by this bound in `require_sync`
   = note: this error originates in the attribute macro `phantom` (in Nightly builds, run with -Z macro-backtrace for more info)
